--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "redbox-react": "^1.2.0",
     "replace": "^0.3.0",
     "sass-loader": "^3.1.2",
+    "underscore": "^1.8.3",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.9",
     "webpack-hot-middleware": "^2.6.0",
